@@ -19,12 +19,12 @@ License: MIT
 LazyData: true
 Collate: 'dimensions.r' 'helper-arrange.r' 'helper-col-wise.r'
     'helper-count.r' 'helper-data-frame.r' 'helper-defaults.r'
-    'helper-each.r' 'helper-quick-df.r' 'helper-splat.r'
-    'helper-summarise.r' 'helper-try.r' 'helper-vaggregate.r' 'id.r'
-    'immutable.r' 'indexed-array.r' 'indexed-data-frame.r' 'indexed.r'
-    'join.r' 'loop-apply.r' 'ply-array.r' 'ply-data-frame.r'
-    'ply-iterator.r' 'ply-list.r' 'ply-mapply.r' 'ply-null.r'
-    'ply-replicate.r' 'progress.r' 'quote.r' 'rbind-matrix.r' 'rbind.r'
-    'simplify-array.r' 'simplify-data-frame.r' 'simplify-vector.r'
-    'split-array.r' 'split-data-frame.r' 'split-indices.r' 'split.r'
-    'utils.r'
+    'helper-each.r' 'helper-quick-df.r' 'helper-round-any.r'
+    'helper-splat.r' 'helper-summarise.r' 'helper-try.r'
+    'helper-vaggregate.r' 'id.r' 'immutable.r' 'indexed-array.r'
+    'indexed-data-frame.r' 'indexed.r' 'join.r' 'loop-apply.r'
+    'ply-array.r' 'ply-data-frame.r' 'ply-iterator.r' 'ply-list.r'
+    'ply-mapply.r' 'ply-null.r' 'ply-replicate.r' 'progress.r'
+    'quote.r' 'rbind-matrix.r' 'rbind.r' 'simplify-array.r'
+    'simplify-data-frame.r' 'simplify-vector.r' 'split-array.r'
+    'split-data-frame.r' 'split-indices.r' 'split.r' 'utils.r'
