@@ -5,6 +5,7 @@ export(count)
 export(as.data.frame.function)
 export(defaults)
 export(each)
+export(round_any)
 export(splat)
 export(summarise, summarize)
 export(failwith)
