@@ -1,5 +1,7 @@
 plyr 1.2 (2010-XX-XX) ---------------------------------------------------
 
+* move round_any out of reshape and into plyr.
+
 * a*ply and m*ply gain an .expand argument that controls whether data frames
   produce a single output dimension (one element for each row), or an output
   dimension for variable
